[package]
name = "rushell_deps_linefeed"
description = "FORK of `linefeed` for rushell. Please use the official linefeed instead of this."

authors = ["Murarth <murarth@gmail.com>", "Jeff Kim<hiking90@gmail.com"]
version = "0.6.0-jeff.1"
edition = "2018"

documentation = "https://docs.rs/linefeed/"
homepage = "https://github.com/murarth/linefeed"
repository = "https://github.com/hiking90/linefeed-rushell"

categories = ["command-line-interface"]
keywords = ["rushell"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
dirs = "2"
mortal = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "combaseapi", "minwindef", "ntdef", "shlobj", "winbase", "wincon",
    "winerror", "winuser" ] }

[dev-dependencies]
ansi_term = "0.11"
assert_matches = "1.2"
rand = "0.5"
